Fixed navigation bar responsive collapsing.

--- a/shoe-portal/web/css/boottheme/innner.style.css
+++ b/shoe-portal/web/css/boottheme/innner.style.css
@@ -132,7 +132,7 @@ body {
     letter-spacing: -1px;
 }
 /* RESPONSIVE CSS -------------------------------------------------- */
-@media (max-width: 979px) {
+@media (max-width: 300px) { /*@media (max-width: 979px) */
     .container-fluid.navbar-wrapper {
         margin-bottom: 0;
         width: auto;
@@ -155,7 +155,7 @@ body {
     .featurette-image.pull-left, .featurette-image.pull-right {
         display: block;
         float: none;
-        max-width: 40%;
+        max-width: 10%;
         margin: 0 auto 20px;
     }
 }
